<resources>

    <string name="app_name">InstaCram</string>
    <string name="hello_world">InstaCram</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">InstaCram</string>
    <string name="new_deck">New Deck</string>
    <string name="view_deck">View Deck</string>
    <string name="edit_deck">Edit Deck</string>
    <string name="title_activity_edit_deck">InstaCram</string>
    <string name="save_card">Save Card</string>
    <string name="thumb_front_desc">Front</string>
    <string name="thumb_back_desc">Back</string>
    <string name="currently_editing">Currently Editing Deck: </string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="select_deck">Select Deck</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="title_activity_view_deck">ViewDeckActivity</string>
    <string name="title_activity_deck_gallery">DeckGalleryActivity</string>
	<string name="space"> </string>
	<string name="no_decks_available">No Decks Available</string>
	<string name="input_new_deck_name">Input New Deck Name</string>
	<string name="ok">OK</string>
	<string name="adding_new_deck">Adding New Deck</string>
	<string name="error_please_input_both_sides_of_card">Error: Input both sides</string>
	
</resources>