<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >

  	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
	    <Button android:id="@+id/new_deck"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/new_deck" />
	</LinearLayout>
    
  	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >    
	    <Button android:id="@+id/edit_deck"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/edit_deck" />
	</LinearLayout>
	
  	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >    
	    <Button android:id="@+id/view_deck"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/view_deck" />  
    </LinearLayout>
</LinearLayout>
